--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -228,6 +228,11 @@ nav a:hover {
     border-top: 4px solid var(--highlight-hover-color);
 }
 
+#profilpic{
+    width: 20px;
+    border-radius: 50% 50%;
+}
+
 /* -------------------------------------------------------------------------- */
 /*                                   Banner                                   */
 /* -------------------------------------------------------------------------- */
