--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,9 +51,6 @@ font-family: 'Arimo Bold';
     --footer-content-background-color: #0D0A26;
     --footer-copyrights-background-color: #0c0923;
 
-    --form-error-color: red;
-    --form-success-color: #00ffaa;
-
     /* Fonts */
     --header-font: 'Arimo Bold';
     --banner-font: 'Aspira Black';
@@ -94,10 +91,6 @@ font-family: 'Arimo Bold';
 /* -------------------------------------------------------------------------- */
 /*                                   Global                                   */
 /* -------------------------------------------------------------------------- */
-*, *::before, *::after {
-    box-sizing: border-box;
-}
-
 body {
     background-color: var(--default-background-color);
     margin: 0;
@@ -106,10 +99,6 @@ body {
     color: var(--paragraph-color);
     font-family: var(--paragraph-font);
     font-size: var(--paragraph-font-size);
-}
-
-p a {
-    color: var(--paragraph-color);
 }
 
 strong {
@@ -187,25 +176,11 @@ textarea, input:not([type="submit"]) {
     margin-bottom: 2%;
 }
 
-.form-msg {
-    font-size: 1.2em;
-    text-align: center;
-}
-
-    .form-error {
-        color: var(--form-error-color);
-    }
-
-    .form-success {
-        color: var(--form-success-color);
-    }
-
 /* -------------------------------------------------------------------------- */
 /*                                   Header                                   */
 /* -------------------------------------------------------------------------- */
 header {
     background-color: var(--header-color);
-    width: 100%;
 
     position: sticky;
     top: 0;
@@ -231,7 +206,7 @@ h1 {
 nav ul {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-content: center;
 }
 
 nav li {
@@ -247,16 +222,10 @@ nav a {
     color: var(--header-text-color);
 }
 
-nav a:not(:has(.header-profile-pic)):hover {
+nav a:hover {
     color: var(--highlight-hover-color);
     padding-block-start: 20px;
     border-top: 4px solid var(--highlight-hover-color);
-}
-
-.header-profile-pic {
-    border-radius: 50%;
-    width: 40px;
-    height: 40px;
 }
 
 /* -------------------------------------------------------------------------- */
@@ -310,7 +279,7 @@ footer p, footer li {
     padding: 12px;
 
     width: auto;
-    height: 2em;
+    height: 1em;
     margin: 0 4px;
 }
 
@@ -481,7 +450,9 @@ footer p, footer li {
 /* -------------------------------------------------------------------------- */
 #homepage-header {
     background-color: var(--homepage-header-color);
+
     position: fixed;
+    width: calc(100% - 2 * var(--page-horizontal-padding)); /* 100% - 2 * horizontal padding */
 }
 
 /* ------------------------- Homepage Banner Section ------------------------ */
@@ -915,8 +886,8 @@ footer p, footer li {
 }
 
 #stats-list > .stat-display {
-    min-width: 200px;
-    max-width: 280px;
+    min-width: 140px;
+    max-width: 200px;
     padding: 2%;
 }
 
@@ -996,4 +967,15 @@ footer p, footer li {
 }
 .buttonChat{
     margin-left: 5%;
+}
+
+#salami{
+    background-color: red;
+    color: blue;
+}
+
+.error {
+    color: red;
+    font-size: 1.2em;
+    text-align: centerm;
 }
