--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1038,3 +1038,27 @@ footer li {
 .buttonChat {
     margin-left: 5%;
 }
+.backchat{
+    background-color: rgb(0, 170, 255);
+    margin-top: 0%;
+    margin-bottom: 0%;
+    background-size: 20vw;
+    border-radius: 5px;
+}
+.backchat2{
+    background-color: rgb(255, 255, 255);
+    margin-top: 0%;
+    margin-bottom: 0%;
+    background-size: 5%;
+    border-radius: 5px;
+}
+.messagechat{
+    color: #131234;
+    width: 100vw;
+}
+.buttonChat{
+    width: 5%;
+}
+.test{
+    background-size: 20%;
+}
