--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,13 +102,13 @@
 *,
 *::before,
 *::after {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
 body {
     background-color: var(--default-background-color);
-    margin: 0;
-    padding: 0;
 
     color: var(--paragraph-color);
     font-family: var(--paragraph-font);
@@ -137,7 +137,7 @@ section,
 img {
     width: 100%;
     height: auto;
-    /* vertical-align: middle; */
+    vertical-align: middle;
 }
 
 /* --------------------------------- Buttons -------------------------------- */
@@ -175,17 +175,10 @@ h4 {
     font-size: var(--title-font-size);
 }
 
-h3,
-h4 {
-    margin: 0;
-}
-
 /* ---------------------------------- Forms --------------------------------- */
 form {
     display: flex;
     flex-direction: column;
-
-    /* width: 100%; */
 }
 
 textarea,
