--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -636,6 +636,10 @@ footer li {
 }
 
 /* ---------------------------- About Us Section ---------------------------- */
+.header-profile-pic{
+    width: 34px;
+    border-radius: 50% 50%;
+}
 
 #about-us {
     padding-bottom: 4%;
