--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,9 @@
     --footer-content-background-color: #0d0a26;
     --footer-copyrights-background-color: #0c0923;
 
+    --form-error-color: red;
+    --form-success-color: #00ffaa;
+
     /* Fonts */
     --header-font: "Arimo Bold";
     --banner-font: "Aspira Black";
@@ -96,8 +99,6 @@
 /* -------------------------------------------------------------------------- */
 /*                                   Global                                   */
 /* -------------------------------------------------------------------------- */
-<<<<<<< HEAD
-=======
 *,
 *::before,
 *::after {
@@ -106,13 +107,16 @@
     box-sizing: border-box;
 }
 
->>>>>>> 69a7e4bc8595ff48609962a244c9f90837dd8e4a
 body {
     background-color: var(--default-background-color);
 
     color: var(--paragraph-color);
     font-family: var(--paragraph-font);
     font-size: var(--paragraph-font-size);
+}
+
+p a {
+    color: var(--paragraph-color);
 }
 
 strong {
@@ -193,8 +197,6 @@ input:not([type="submit"]) {
     margin-bottom: 2%;
 }
 
-<<<<<<< HEAD
-=======
 .form-msg {
     font-size: 1.2em;
     text-align: center;
@@ -208,12 +210,12 @@ input:not([type="submit"]) {
     color: var(--form-success-color);
 }
 
->>>>>>> 69a7e4bc8595ff48609962a244c9f90837dd8e4a
 /* -------------------------------------------------------------------------- */
 /*                                   Header                                   */
 /* -------------------------------------------------------------------------- */
 header {
     background-color: var(--header-color);
+    width: 100%;
 
     position: sticky;
     top: 0;
@@ -239,7 +241,7 @@ h1 {
 nav ul {
     display: flex;
     justify-content: space-between;
-    align-content: center;
+    align-items: center;
 }
 
 nav li {
@@ -256,10 +258,16 @@ nav a {
     color: var(--header-text-color);
 }
 
-nav a:hover {
+nav a:not(:has(.header-profile-pic)):hover {
     color: var(--highlight-hover-color);
     padding-block-start: 20px;
     border-top: 4px solid var(--highlight-hover-color);
+}
+
+.header-profile-pic {
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
 }
 
 /* -------------------------------------------------------------------------- */
@@ -318,7 +326,7 @@ footer li {
     padding: 12px;
 
     width: auto;
-    height: 1em;
+    height: 2em;
     margin: 0 4px;
 }
 
@@ -490,9 +498,7 @@ footer li {
 /* -------------------------------------------------------------------------- */
 #homepage-header {
     background-color: var(--homepage-header-color);
-
     position: fixed;
-    width: calc(100% - 2 * var(--page-horizontal-padding)); /* 100% - 2 * horizontal padding */
 }
 
 /* ------------------------- Homepage Banner Section ------------------------ */
@@ -720,9 +726,9 @@ footer li {
 }
 /* Register Password strength indicator*/
 .progress {
-    height: 3px !important;
-    margin-top: -5px !important;
-    margin-bottom: -10px !important;
+    height: 12px !important;
+    margin-top: 10px !important;
+    margin-bottom: 12px !important;
     margin-left: 1%;
     width: 98%;
 }
@@ -977,8 +983,8 @@ footer li {
 }
 
 #stats-list > .stat-display {
-    min-width: 140px;
-    max-width: 200px;
+    min-width: 200px;
+    max-width: 280px;
     padding: 2%;
 }
 
@@ -1056,17 +1062,3 @@ footer li {
 .buttonChat {
     margin-left: 5%;
 }
-<<<<<<< HEAD
-
-#salami{
-    background-color: red;
-    color: blue;
-}
-
-.error {
-    color: red;
-    font-size: 1.2em;
-    text-align: centerm;
-}
-=======
->>>>>>> 69a7e4bc8595ff48609962a244c9f90837dd8e4a
