--- a/assets/css/memory.css
+++ b/assets/css/memory.css
@@ -18,6 +18,7 @@
     gap: 1%;
     justify-content: center;
     perspective: 1000px;
+    padding: 1%;
 }
 
 .game-card {
@@ -28,7 +29,7 @@
     max-width: 120px;
     height: auto;
     padding: 0;
-    margin: 0;
+    margin: auto;
 
     transform-style: preserve-3d;
     transition: transform 0.5s ease-in;
